[tool.poetry]
name = "MtG Stack Explainer"
version = "0.1.0"
description = "A tool to explore how things interact on the stack"
authors = ["Justin Bramley"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
pylint = "^2.16.2"
flake8 = "^6.0.0"
bandit = "^1.7.4"
pydocstyle = "^6.3.0"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
